<resources>
    <string name="app_name">EarthquakeTracker</string>
    <string name="location_2">location_2</string>
    <string name="location_1">location_1</string>
    <string name="time">time</string>
    <string name="magnitude">magnitude</string>
    <string name="magnitudeBackground">magnitudeBackground</string>
    <string name="earthquake">earthquake</string>
    <string name="title_alert">Alert level</string>
    <string name="title_felt">Reported as felt by</string>
    <string name="title_significance">Significance score</string>
    <string name="content_significance">%.1f %%</string>
    <string name="title_cdi_reported">Maximum Reported Intensity</string>
    <string name="content_cdi_reported">%.1f / 10.0</string>
    <string name="title_depth">Depth</string>
    <string name="content_depth">%d km</string>
    <string name="title_latitude">Latitude</string>
    <string name="title_longitude">Longitude</string>
    <string name="title_mmi_estimated">Maximum estimated intensity</string>
    <string name="title_nst"># of seismic stations to calculate location</string>
    <string name="content_null">-</string>
    <string name="map_image_url">map-image-url</string>
    <string name="map">map</string>
    <string name="map_background">map_background</string>
    <string name="magnitude_value">%1$.0f</string>

    <string-array name="limit_string_array">
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
    </string-array>

    <string-array name="sort_string_array">
        <item>@string/recent_first</item>
        <item>@string/oldest_first</item>
        <item>@string/lowest_magnitude_first</item>
        <item>@string/highest_magnitude_first</item>
    </string-array>
    <string name="recent_first">Recent first</string>
    <string name="oldest_first">Oldest first</string>
    <string name="lowest_magnitude_first">Lowest magnitude first</string>
    <string name="highest_magnitude_first">Highest magnitude first</string>
    <string name="recent_first_order_by">time</string>
    <string name="oldest_first_order_by">time-asc</string>
    <string name="lowest_magnitude_first_order_by">magnitude-asc</string>
    <string name="highest_magnitude_first_order_by">magnitude</string>

    <string name="title_limit_quakes"># of quakes</string>
    <string name="title_local_sort">Sort results by</string>
    <string name="title_download_sort">Download by</string>
    <string name="title_time">Time</string>
    
    <string name="tsunami_reported">Large oceanic activity reported</string>
    <string name="reviewed_by_system">Reviewed by system</string>
    <string name="reviewed_by_human">Reviewed by human</string>
    <string name="distance">%1$d %2$s away from you</string>
    <string name="automatic">automatic</string>

    <string name="unit_mi">mi</string>
    <string name="unit_km">km</string>
</resources>
